modifs mineures de logique et de style

--- a/src/templates/conges/gerer_conges.html.twig
+++ b/src/templates/conges/gerer_conges.html.twig
@@ -36,7 +36,7 @@
                             {% if demande.motif %}
                                 <tr>
                                     <th> Motif : </th>
-                                    <td style="vertical-align: middle; overflow-wrap: anywhere;">{{ demande.motif }}</td>
+                                    <td style="vertical-align: middle; overflow-wrap: anywhere; text-align: center">{{ demande.motif }}</td>
                                 </tr>
                             {% endif %}
                             <tr>
