--- a/src/templates/conges/conges.html.twig
+++ b/src/templates/conges/conges.html.twig
@@ -48,9 +48,9 @@
                                         <td style="vertical-align: middle;">{{ demande.datedemande | date("d / m / Y") }}</td>
                                         <td style="vertical-align: middle;">{{ demande.nature }} {% if demande.motif %} <br /> <strong> Motif :</strong> {{ demande.motif }} {% endif %}</td>
                                         <td>
-                                            <strong> Début : </strong> {{ demande.datedebut | date("d / m / Y") }}
+                                            <strong> Début : </strong> {{ demande.datedebut | date("d / m / Y") }} &nbsp; ({{ demande.typedatedebut }})
                                             <br />
-                                            <strong> Fin : </strong> &nbsp;&nbsp;&nbsp; {{ demande.datefin | date("d / m / Y") }}
+                                            <strong> Fin : </strong> &nbsp;&nbsp;&nbsp; {{ demande.datefin | date("d / m / Y") }} &nbsp; ({{ demande.typedatefin }})
                                         </td>
                                         <td style="vertical-align: middle; text-align: center; background-color: {{ color }}">{{ demande.etat }}</td>
                                     </tr>
