dernière modif de style

--- a/src/templates/admin/bars.html.twig
+++ b/src/templates/admin/bars.html.twig
@@ -3,7 +3,7 @@
     <div style="font-size: 15px" class="col-md-3 left_col menu_fixed">
         <div class="left_col scroll-view">
             <div class="navbar nav_title">
-                <a style="display: flex; padding: 0" href="{{ path('app_home') }}" class="site_title"> <img style="margin: 0 3px 0 3px;" src="{{ asset('build/images/Logo-delko.png') }}" alt="logo delko"> Delko Congés </a>
+                <a style="display: flex; padding: 0" href="{{ path('app_home') }}" class="site_title"> <img style="margin: 0 30px 0 5px;" src="{{ asset('build/images/Logo-delko.png') }}" alt="logo delko"> Congés </a>
             </div>
 
             <div class="clearfix"></div>
