Dernières corrections pour soutenance

--- a/src/templates/admin/bars.html.twig
+++ b/src/templates/admin/bars.html.twig
@@ -10,7 +10,7 @@
 
             <!-- menu profile quick info -->
             <div style="display: flex; justify-content: center" class="profile clearfix">
-                <div style="display: flex; flex-direction: column; align-items: center" class="profile_info">
+                <div style="display: flex; flex-direction: column; align-items: center; width: auto" class="profile_info">
                     <span style="font-size: 15px">Bienvenue,</span>
                     <h2>{{ app.user.prenom }} {{ app.user.nom }}</h2>
                 </div>
