--- a/src/templates/conges/conges.html.twig
+++ b/src/templates/conges/conges.html.twig
@@ -18,7 +18,7 @@
             <div class="col-md-12">
                 <div style="font-size: 15px" class="x_panel">
                     <div class="x_title">
-                        <h2>Demandes de congés éffectuées</h2>
+                        <h2>Demandes de congés effectuées</h2>
                         <ul class="nav navbar-right panel_toolbox">
                             <li>
                                 <a href="{{ path('app_conges_demande') }}"> <button class="btn btn-success"> Nouvelle demande </button> </a>
@@ -30,7 +30,7 @@
                         <div class="row">
                             <table id="example" class="display table table-striped table-bordered dataminetables">
                                 <thead style="text-align:center">
-                                <th>éffectuée le</th>
+                                <th>effectuée le</th>
                                 <th>Nature</th>
                                 <th>Dates</th>
                                 <th>État</th>
