--- a/src/templates/conges/gerer_conges.html.twig
+++ b/src/templates/conges/gerer_conges.html.twig
@@ -63,8 +63,8 @@
                                 Refuser
                             </a>
                             <a class="btn btn-warning" title="Laisser en attente" onclick="return confirm('Êtes vous sûr de vouloir laisser la demande en attente pour l&#145;instant ?\nVous pourrez toujours revenir prendre votre décision en cliquant une nouvelle fois sur le lien que vous avez reçu par mail.')" href="{{ path('app_conges_attente', {id: demande.id, userId: demande.userId}) }}">
-                                <i class="fa fa-question-circle"></i>
-                                En attente
+                                <i class="fa fa-clock-o"></i>
+                                Laisser en attente
                             </a>
                         </div>
                     </div>
